Remove redundent files

--- a/Bayesian-Deep-Learning.ipynb
+++ b/Bayesian-Deep-Learning.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,6 +269,7 @@
     "        batch-size\n",
     "    \"\"\"\n",
     "    with tf.Session() as sess:\n",
+    "        tf.set_random_seed(1234)\n",
     "        sess.run(tf.global_variables_initializer())\n",
     "        for i in range(iterations):\n",
     "            #Run it in batches.\n",
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
